--- a/views/brand.html
+++ b/views/brand.html
@@ -249,7 +249,7 @@
         </div>
     </div>
 </div>
-<!--[if lt IE 9]>
+<div class="img3_bg"></div><div class="img3_bg"></div><!--[if lt IE 9]>
 <script src="http://libs.baidu.com/jquery/1.11.1/jquery.min.js"></script>
 <![endif]-->
 
