--- a/views/app/index.html
+++ b/views/app/index.html
@@ -27,6 +27,9 @@
 			<a href="Dish.html"><img src="../../assets/images/app/icon_cp.png"></a>
 			<a href="contactUs.html"><img src="../../assets/images/app/icon_lx.png"></a>
 		</div>
+		<img src="../../assets/images/img3.png" class="imgLogo3">
+		<img src="../../assets/images/img4.png" class="imgLogo4">
+		<span class="imgLogo4"></span>
 	</body>
 	<script src="../../assets/lib/jquery-1.9.1.min.js"></script>
 	<script src="../../assets/js/app-phone.js"></script>
