--- a/assets/css/app-phone.css
+++ b/assets/css/app-phone.css
@@ -16,6 +16,10 @@ a{text-decoration: none}
 .index-menu{margin: 0 auto;margin-top: 10.7%;text-align: center}
 .index-menu a{width: 18%;margin: 0 2%;display: inline-block}
 .index-menu a img{width: 100%;}
+.imgLogo3{width:147px;position: absolute;left: 0;bottom:0px}
+.imgLogo4{width:100px;position: absolute;right: 0;top: 0}
+
+
 /*头*/
 .header{width: 100%;height: 45px;text-align: center;position: fixed;top: 0;z-index: 2;background-color: #2e3200;}
 .header .nav{width: 80px;text-align: center;position: absolute;left: 3%;top: 10px;z-index: 5;}
