--- a/views/fddz.html
+++ b/views/fddz.html
@@ -43,10 +43,10 @@
 <div class="nav">
     <ul class="clearFloat">
         <li>
-            <a href="index.html"">首页</a>
+            <a href="index.html">首页</a>
         </li>
         <li>
-            <a href="aboutUs.html>品牌</a>
+            <a href="aboutUs.html">品牌</a>
             <div>
                 <p><i></i></p>
                 <p>
