--- a/views/app/index.html
+++ b/views/app/index.html
@@ -29,6 +29,7 @@
 		</div>
 		<img src="../../assets/images/img3.png" class="imgLogo3">
 		<img src="../../assets/images/img4.png" class="imgLogo4">
+		<img src="../../assets/images/img2.png" class="imgLogo5">
 		<span class="imgLogo4"></span>
 	</body>
 	<script src="../../assets/lib/jquery-1.9.1.min.js"></script>
