--- a/views/index.html
+++ b/views/index.html
@@ -61,7 +61,7 @@
                     </p>
                 </div>
             <li>
-                <a>火锅加盟  </a>
+                <a href="jm_home.html">火锅加盟  </a>
                 <div>
                     <p><i></i></p>
                     <p>
@@ -130,10 +130,16 @@
         </ul>
     </div>
     <div class="banner">
-        <div class="swiper-container myswiper1" style="height: 400px">
+        <div class="swiper-container myswiper1">
             <div class="swiper-wrapper">
-                <div class="swiper-slide"><img src="../assets/images/pic6.jpg" style="height: 100%"></div>
-                <div class="swiper-slide"><img src="../assets/images/pic6.jpg" style="height: 100%"></div>
+                <div class="swiper-slide"><img src="../assets/images/shouye-banner1.jpg"></div>
+                <div class="swiper-slide"><img src="../assets/images/shouye-banner2.jpg">
+                    <div class="banner_btn clearFloat">
+                        <div><a>加盟详情</a></div>
+                        <div><a>加盟费</a></div>
+                    </div>
+                </div>
+                <div class="swiper-slide"><img src="../assets/images/shouye-banner3.jpg"></div>
             </div>
         </div>
         <div class="swiper-pagination"></div>
