--- a/views/jm_home.html
+++ b/views/jm_home.html
@@ -130,92 +130,31 @@
     </ul>
 </div>
 <div class="swiper-container swiper-banner swiper-container-horizontal">
-    <div class="swiper-wrapper" style="transform: translate3d(-2260px, 0px, 0px); transition-duration: 0ms;"><dl class="swiper-slide jm swiper-slide-duplicate" data-swiper-slide-index="6" style="width: 1100px; margin-right: 30px;">
-        <dt><img src="../assets/images/example/dudao.png" alt="督导巡店"></dt>
-        <dd>
-            <div class="title"><span><b>6</b></span><h2>专业督导定期巡店！</h2><p>专业督导每年8-12次巡店。24小时解答经营遇到的问题。</p></div>
-            <div class="item"><span>丰富的经营管理经验</span><span>最完美的解决方案</span></div>
-            <div class="memo">时刻关注，及时发现并解决问题。</div>
-            <div class="memo2">味蜀吾总部为加盟店做足了功课，从开店前的市场调查，人口分析，消费习惯分析，同行分析，消费定位，菜品价格等，开店后的促销策略，管理运营，经营问题分析等都有味蜀吾拥有多年成功经验的专业人士手把手的支持。</div>
-        </dd>
-    </dl>
-        <dl class="swiper-slide jm swiper-slide-prev" data-swiper-slide-index="0" style="width: 1100px; margin-right: 30px;">
-            <dt><img src="../assets/images/example/hg.png" alt="火锅加盟"></dt>
+    <div class="swiper-wrapper" style="transform: translate3d(-2260px, 0px, 0px); transition-duration: 0ms;">
+        <dl class="swiper-slide jm">
+            <dt><img src="../assets/images/jiameng-banner1.jpg" alt="督导巡店"></dt>
             <dd>
-                <h1>火锅加盟</h1>
-                <div class="item"><span>品牌</span><span>美味</span><span>支持</span><span>营销</span><span>督导</span></div>
-                <div class="memo">一步到位，轻松开店！</div>
-                <div class="button"><a href="#ly" class="a1">留言加盟</a></div>
             </dd>
         </dl>
-        <dl class="swiper-slide jm swiper-slide-active" data-swiper-slide-index="1" style="width: 1100px; margin-right: 30px;">
-            <dt><img src="../assets/images/example/jp.png" alt="品牌荣誉"></dt>
+        <dl class="swiper-slide jm swiper-slide-prev">
+            <dt><img src="../assets/images/jiameng-banner2.jpg" alt="火锅加盟"></dt>
             <dd>
-                <div class="title"><span><b>1</b></span><h2>投资潜力火锅品牌。</h2><p>十多项荣誉称号，为您的投资提供信誉保障。</p></div>
-                <div class="item"><span>十强火锅品牌</span><span>十大文化主题火锅</span><span>人气餐饮品牌</span><span>十大发展潜力火锅</span></div>
-                <div class="memo">知名品牌保障，赢在起跑线！</div>
-                <div class="memo2"></div>
-                <div class="button"><a href="/list_1578.html" class="a1" target="_blank">更多荣誉</a><a href="#ly" class="a2">留言加盟</a></div>
+
             </dd>
         </dl>
-        <dl class="swiper-slide jm swiper-slide-next" data-swiper-slide-index="2" style="width: 1100px; margin-right: 30px;">
-            <dt><img src="../assets/images/example/td.png" alt="极尽团队"></dt>
+        <dl class="swiper-slide jm swiper-slide-active">
+            <dt><img src="../assets/images/jiameng-banner3.jpg" alt="品牌荣誉"></dt>
             <dd>
-                <div class="title"><span><b>2</b></span><h2>精英团队，为你所用！</h2><p>从选址开始全程驻店支持，轻松快速开店。</p></div>
-                <div class="item"><span>筹备团队</span><span>厨政团队</span><span>设计团队</span><span>客服团队</span><span>营销策划团队</span><span>督导团队</span></div>
-                <div class="memo">团队所向，无往不利！</div>
-                <div class="memo2">强大：各岗位专业人士，百余人。<br>专业：各路精英，百里挑一。<br>经验：160多家成功开店经验。</div>
-                <div class="button"><a href="/jmzx/zctd.html" class="a1" target="_blank">支持团队</a><a href="#ly" class="a2">留言加盟</a></div>
+
             </dd>
         </dl>
-        <dl class="swiper-slide jm" data-swiper-slide-index="3" style="width: 1100px; margin-right: 30px;">
-            <dt><img src="../assets/images/example/zc.png" alt="加盟支持"></dt>
+        <dl class="swiper-slide jm swiper-slide-next">
+            <dt><img src="../assets/images/jiameng-banner4.jpg" alt="极尽团队"></dt>
             <dd>
-                <div class="title"><span><b>3</b></span><h2>全程保姆式扶持！</h2><p>从选址开始全程驻店支持，轻松快速开店。</p></div>
-                <div class="item"><span>专业高效</span><span>经验丰富</span><span>强大完善</span></div>
-                <div class="memo">全方位，全程扶持，轻松开店！</div>
-                <div class="memo2">包括：选址，招聘/培训，设计/规划/装修监督，桌椅锅灶等营建物资支持，经营手续办理，市场考察/菜品采购/定价，软件系统，技术支持，运营管理，开业筹备，开业活动策划、驻店指导，全国优质媒体资源库，督导巡店。</div>
-                <div class="button"><a href="/jmzx/jmzc.html" class="a1" target="_blank">加盟支持</a><a href="#ly" class="a2">留言加盟</a></div>
+
             </dd>
         </dl>
-        <dl class="swiper-slide jm" data-swiper-slide-index="4" style="width: 1100px; margin-right: 30px;">
-            <dt><img src="../assets/images/example/wd.png" alt="健康锅底"></dt>
-            <dd>
-                <div class="title"><span><b>4</b></span><h2>麻辣鲜香，美味健康！</h2><p>以好吃，健康为标准，深受消费者欢迎！</p></div>
-                <div class="item"><span>好吃</span><span>健康</span><span>不上火</span><span>高回头率</span></div>
-                <div class="memo">辣而不燥,久煮不咸,久吃不上火！</div>
-                <div class="memo2">味蜀吾至尊至荣的消费体验，迷人的味道让顾客无法忘记，味蜀吾还有一支专业的团队专门研究消费者喜好，消费心里，并时时反馈给运营部最受消费者欢迎的营销策略，让顾客不知不觉消费了一次又一次。</div>
-                <div class="button"><a href="/xw/gsxw/2450.html" class="a1">健康锅底</a><a href="#ly" class="a2">留言加盟</a></div>
-            </dd>
-        </dl>
-        <dl class="swiper-slide jm" data-swiper-slide-index="5" style="width: 1100px; margin-right: 30px;">
-            <dt><img src="../assets/images/example/yx.png" alt="营销团队"></dt>
-            <dd>
-                <div class="title"><span><b>5</b></span><h2>总部营销团队，针对策划！</h2><p>整合全国各地优质媒体资源库，为你所用！</p></div>
-                <div class="item"><span>文案</span><span>美工</span><span>营销</span><span>策划</span><span>优质媒体资源库</span></div>
-                <div class="memo">给你一个火爆开业策划！</div>
-                <div class="memo2">营销团队经过大量数据分析市场，分析消费者消费习惯，频率，口味等，找到了专属味蜀吾的一片蓝海。并且每天收集全国各加盟店数据做分析，优化运营，营销策略反馈到各店，让加盟店的生意天天火爆！</div>
-                <div class="button"><a href="#ly" class="a2">留言加盟</a></div>
-            </dd>
-        </dl>
-        <dl class="swiper-slide jm" data-swiper-slide-index="6" style="width: 1100px; margin-right: 30px;">
-            <dt><img src="../assets/images/example/dudao.png" alt="督导巡店"></dt>
-            <dd>
-                <div class="title"><span><b>6</b></span><h2>专业督导定期巡店！</h2><p>专业督导每年8-12次巡店。24小时解答经营遇到的问题。</p></div>
-                <div class="item"><span>丰富的经营管理经验</span><span>最完美的解决方案</span></div>
-                <div class="memo">时刻关注，及时发现并解决问题。</div>
-                <div class="memo2">味蜀吾总部为加盟店做足了功课，从开店前的市场调查，人口分析，消费习惯分析，同行分析，消费定位，菜品价格等，开店后的促销策略，管理运营，经营问题分析等都有味蜀吾拥有多年成功经验的专业人士手把手的支持。</div>
-            </dd>
-        </dl>
-        <dl class="swiper-slide jm swiper-slide-duplicate swiper-slide-duplicate-prev" data-swiper-slide-index="0" style="width: 1100px; margin-right: 30px;">
-            <dt><img src="../assets/images/example/hg.png" alt="火锅加盟"></dt>
-            <dd>
-                <h1>火锅加盟</h1>
-                <div class="item"><span>品牌</span><span>美味</span><span>支持</span><span>营销</span><span>督导</span></div>
-                <div class="memo">一步到位，轻松开店！</div>
-                <div class="button"><a href="#ly" class="a1">留言加盟</a></div>
-            </dd>
-        </dl></div>
+       </div>
     <div class="swiper-pagination swiper-pagination-clickable swiper-pagination-bullets"><span class="swiper-pagination-bullet"></span><span class="swiper-pagination-bullet swiper-pagination-bullet-active"></span><span class="swiper-pagination-bullet"></span><span class="swiper-pagination-bullet"></span><span class="swiper-pagination-bullet"></span><span class="swiper-pagination-bullet"></span><span class="swiper-pagination-bullet"></span></div>
 </div>
 <ul id="item">
@@ -521,11 +460,9 @@
 <script>
     var swiper = new Swiper('.swiper-banner', {
         pagination: '.swiper-pagination',
-        //nextButton: '.swiper-button-next',
-        //prevButton: '.swiper-button-prev',
         slidesPerView: 1,
         paginationClickable: true,
-        spaceBetween: 30,
+        spaceBetween: 1,
 //        autoplay: 5000,
         loop: true,
         autoplayDisableOnInteraction: false
