--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -24,9 +24,15 @@ body{background:url(../images/bg.png) repeat;position: relative}
 .nav ul li div a{display: block;margin: 0 10px;font-size: 13px;height: 35px;line-height: 35px}
 .nav ul li div a:hover{background: #f9c41e;}
 .banner{position: relative}
-.banner .swiper-container{width: 100%;height: 400px}
+.banner .swiper-container{width: 100%;background: #FFFFFF}
 .banner .swiper-pagination {text-align: center;margin: 0 auto;margin: 16px;position: inherit !important;}
 .banner .swiper-pagination span{display: inline-block; width: 12px; height: 12px; background-color: #f9c41e;margin: 0 6px}
+/*修改*/
+.banner .banner_btn{position: absolute;bottom: 20px;right: 30%;}
+.banner .banner_btn div{width: 150px;height: 50px;padding: 4px;border: 1px solid #f9c41e;border-radius: 50px;float: left;}
+.banner .banner_btn div:last-child{margin-left: 30px}
+.banner .banner_btn a{display: inline-block;width: 140px;height: 40px;background:#f9c41e;text-align: center;line-height: 40px;border-radius: 50px;}
+/*修改*/
 .imgLogo3{display: inline-block;background:url(../images/pubImg.png) no-repeat;height:277px;width:195px;background-position:0 -946px;position: absolute;right: 0;top:326px}
 .img-wrap{width: 1000px;margin: 45px auto 109px}
 .img-wrap a{display: inline-block;width: 220px;height: 136px;margin: 0 20px;background: #007aff;float: left}
@@ -115,9 +121,9 @@ body{background:url(../images/bg.png) repeat;position: relative}
 .content_jm .tb tr td {padding: 5px;border-bottom: solid 1px #aaa;border-right: solid 1px #aaa;font-size: 12px;}
 
 /*加盟banner*/
-.swiper-banner{width:1100px; height:450px; margin:0 auto;}
-.swiper-banner dl {width:1200px; height:400px; margin:20px auto; position:relative; color:#333333; font-family:'宋体';}
-.swiper-banner dl  dt{position:absolute;left:0;width:40%;}
+/*修改*/
+.swiper-banner{width:1100px;margin:0 auto;margin-top: 20px}
+.swiper-banner dl {width:1100px; position:relative; color:#333333; font-family:'宋体';}
 .swiper-banner dl  dd{position:absolute;right:0;width:55%;}
 .swiper-banner dl  dd .button{margin-top:30px;}
 .swiper-banner dl  dd .button a {
@@ -126,6 +132,7 @@ body{background:url(../images/bg.png) repeat;position: relative}
 .swiper-banner dl  dd .button a:hover{background:-webkit-linear-gradient(top,#d28400,#944900);background:linear-gradient(top,#d28400,#944900);}
 .swiper-banner dl  dd .button .a1 {background:#c37100;}
 .swiper-banner dl  dd .button .a2 {background:#6e5232;}
+/*修改*/
 
 .swiper-banner dl  dd h1 {margin-top:78px;font-size:34px;font-weight:400; }
 .swiper-banner dl  dd .title{margin-top:40px; position:relative;}
